# sampleMsa

./: CMakeLists.txt  LICENSE  README.md  dumpVector.hpp  environmentVariables.sh  mips.toolchain.cmake  sample.cpp  sample01.cpp  sample02.cpp  sample03.cpp  sample04.cpp  sample05.cpp  sampleLog.txt
